ex1.11_logping/manifests/dep-pingpong.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong
  template:
    metadata:
      labels:
        app: pingpong
    spec:
      volumes:
        - name: shared-log
          # emptyDir: {}
          persistentVolumeClaim: # DONE:
            claimName: ex11-claim
      containers:
        - name: pingpong
          image: usb9/pingpong:1.11.8
          volumeMounts:
          - name: shared-log
            mountPath: /usr/src/app/files
