ex1.11_logping/manifests/service-pingpong.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-svc
spec:
  type: ClusterIP
  selector:
    app: pingpong
  ports:
    - port: 5432
      protocol: TCP
      targetPort: 4001
