ex1.11_logping/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dwk-material-ingress
spec:
  rules:
  - http:
      paths:
      - path: /log
        pathType: Prefix
        backend:
          service:
            name: log-svc
            port: 
              number: 2345
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pingpong-svc
            port: 
              number: 5432
      # - path: /
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: log-svc
      #       port: 
      #         number: 2345
      # - path: /pingpong
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: pingpong-svc
      #       port: 
      #         number: 5432
